팀원추가,수정화면 update

--- a/Design/index.html
+++ b/Design/index.html
@@ -528,7 +528,7 @@
                     <textarea class="txtfield big" id="strengths"></textarea>
                 </div>
                 <div class="row">
-                    <span class="title_content big">자신의 협업스타일</span>
+                    <span class="title_content big">자신의<br> 협업스타일</span>
                     <textarea class="txtfield big" id="Collaboration"></textarea>
                 </div>
                 <button type="submit" class="modal-button" id="memberAddButton">등록하기</button>
@@ -611,7 +611,7 @@
                     <textarea class="txtfield big" id="update_strengths"></textarea>
                 </div>
                 <div class="row">
-                    <span class="title_content big">자신의 협업스타일</span>
+                    <span class="title_content big">자신의 <br>협업스타일</span>
                     <textarea class="txtfield big" id="update_collaboration"></textarea>
                 </div>
                 <button type="submit" class="modal-button" id="memberUpdateButton">수정하기</button>
@@ -625,7 +625,7 @@
         <div class="modal-content-goal">
             <form id="teamGoalForm">
                 <div class="modal-header">
-                    <h1>🥅우리 팀 목표</h1>
+                    <h1>우리 팀 규칙</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close"
                         onclick="closeModal('teamGoalModal')"></button>
                 </div>
