--- a/Design/index.html
+++ b/Design/index.html
@@ -632,6 +632,7 @@
                 <div class="teamGoal">
                     <h5>
                         <ul class="inside">
+                            <li><a href="https://nbcamp.spartacodingclub.kr/mypage/attendance">😺9시 입실체크, 21시 퇴실체크 필수</a></li>
                             <li>😺이쁜 말로 소통하기</li>
                             <li>😺자리를 비울 때는 다른 조원들에게 꼭 알리기</li>
                             <li>😺늦잠 자지 않기</li>
