blog,goal href new window

--- a/Design/index.html
+++ b/Design/index.html
@@ -68,7 +68,7 @@
                     detail_img.innerHTML = ``;
                     document.getElementById('nameDetail').innerHTML = name;
                     document.getElementById('mbtiDetail').innerHTML = mbti;
-                    document.getElementById('blogDetail').innerHTML = `<a href="${blog}">${blog}</a>`;
+                    document.getElementById('blogDetail').innerHTML = `<a href="${blog}" target="_blank">${blog}</a>`;
                     document.getElementById('strengthsDetail').innerHTML = strengths;
                     document.getElementById('collaborationDetail').innerHTML = collaboration;
                     detail_img.innerHTML += `<img class="profile-picture" src="${image}" alt="프로필 사진">`;
@@ -625,14 +625,14 @@
         <div class="modal-content-goal">
             <form id="teamGoalForm">
                 <div class="modal-header">
-                    <h1>우리 팀 규칙</h1>
+                    <h1>우리 팀 규칙🚩</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close"
                         onclick="closeModal('teamGoalModal')"></button>
                 </div>
                 <div class="teamGoal">
                     <h5>
                         <ul class="inside">
-                            <li><a href="https://nbcamp.spartacodingclub.kr/mypage/attendance">😺9시 입실체크, 21시 퇴실체크 필수</a></li>
+                            <li><a href="https://nbcamp.spartacodingclub.kr/mypage/attendance" target="_blank">😺9시 입실체크, 21시 퇴실체크 필수</a></li>
                             <li>😺이쁜 말로 소통하기</li>
                             <li>😺자리를 비울 때는 다른 조원들에게 꼭 알리기</li>
                             <li>😺늦잠 자지 않기</li>
