--- a/Design/index.html
+++ b/Design/index.html
@@ -18,7 +18,7 @@
         import firebaseConfig from '../firebaseConfig.js';
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
-        import { getFirestore, doc, setDoc, getDocs, collection, onSnapshot, deleteDoc, deleteField, updateDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { getFirestore, doc, getDoc, setDoc, getDocs, collection, onSnapshot, deleteDoc, deleteField, updateDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
@@ -196,9 +196,8 @@
             });
         }
 
-        // 팀원 데이터를 Firestore에 추가하는 함수
         async function addTeamMember() {
-            if (auth.currentUser) { // 사용자 로그인 상태 확인
+            if (auth.currentUser) {
                 const memberData = {
                     blog: document.getElementById('blogaddress').value,
                     collaboration: document.getElementById('Collaboration').value,
@@ -208,16 +207,21 @@
                     strengths: document.getElementById('strengths').value
                 };
 
+                const memberRef = doc(db, "member", auth.currentUser.email);
+                const docSnap = await getDoc(memberRef);
+
+                if (docSnap.exists() && docSnap.data()[memberData.name]) {
+                    closeModal('memberaddModal');
+                    alert('동일한 이름의 팀원이 이미 존재합니다.');
+                    return;
+                }
+
                 try {
-                    await setDoc(doc(db, "member", auth.currentUser.email), {
-                        [memberData.name]: memberData // 이름을 키로 사용하여 멤버 데이터 저장
+                    await setDoc(memberRef, {
+                        [memberData.name]: memberData
                     }, { merge: true });
                     closeModal('memberaddModal');
-                    closeModal('detailModal');
-
                     alert('팀원이 성공적으로 추가되었습니다.');
-
-
                 } catch (error) {
                     console.error("팀원 추가 실패: ", error);
                     alert('팀원 추가 실패: ' + error.message);
@@ -225,7 +229,9 @@
             } else {
                 alert('로그인이 필요합니다.');
             }
+
         }
+
 
         // 삭제 버튼에 이벤트 리스너 추가
         document.addEventListener('DOMContentLoaded', function () {
@@ -632,7 +638,8 @@
                 <div class="teamGoal">
                     <h5>
                         <ul class="inside">
-                            <li><a href="https://nbcamp.spartacodingclub.kr/mypage/attendance" target="_blank">😺9시 입실체크, 21시 퇴실체크 필수</a></li>
+                            <li><a href="https://nbcamp.spartacodingclub.kr/mypage/attendance" target="_blank">😺9시
+                                    입실체크, 21시 퇴실체크 필수</a></li>
                             <li>😺이쁜 말로 소통하기</li>
                             <li>😺자리를 비울 때는 다른 조원들에게 꼭 알리기</li>
                             <li>😺늦잠 자지 않기</li>
@@ -677,38 +684,38 @@
 
 
         document.addEventListener('DOMContentLoaded', () => {
-    validateLoginForm();
-    validateSignUpForm();
-    validateAddMemberForm(); // 팀원 추가 폼 검증 함수 호출
+            validateLoginForm();
+            validateSignUpForm();
+            validateAddMemberForm(); // 팀원 추가 폼 검증 함수 호출
 
-    document.getElementById('signInEmail').addEventListener('input', validateLoginForm);
-    document.getElementById('signInPassword').addEventListener('input', validateLoginForm);
+            document.getElementById('signInEmail').addEventListener('input', validateLoginForm);
+            document.getElementById('signInPassword').addEventListener('input', validateLoginForm);
 
-    document.getElementById('signUpEmail').addEventListener('input', validateSignUpForm);
-    document.getElementById('signUpPassword').addEventListener('input', validateSignUpForm);
-    document.getElementById('signUpCheckPassword').addEventListener('input', validateSignUpForm);
+            document.getElementById('signUpEmail').addEventListener('input', validateSignUpForm);
+            document.getElementById('signUpPassword').addEventListener('input', validateSignUpForm);
+            document.getElementById('signUpCheckPassword').addEventListener('input', validateSignUpForm);
 
-    document.getElementById('name').addEventListener('input', validateAddMemberForm); 
-});
+            document.getElementById('name').addEventListener('input', validateAddMemberForm);
+        });
 
-function validateLoginForm() {
-    const email = document.getElementById('signInEmail').value;
-    const password = document.getElementById('signInPassword').value;
-    document.getElementById('signInButton').disabled = !email || !password;
-}
+        function validateLoginForm() {
+            const email = document.getElementById('signInEmail').value;
+            const password = document.getElementById('signInPassword').value;
+            document.getElementById('signInButton').disabled = !email || !password;
+        }
 
-function validateSignUpForm() {
-    const email = document.getElementById('signUpEmail').value;
-    const password = document.getElementById('signUpPassword').value;
-    const passwordConfirm = document.getElementById('signUpCheckPassword').value;
-    const isPasswordsMatch = password === passwordConfirm && password.length > 0;
-    document.getElementById('signUpButton').disabled = !email || !isPasswordsMatch;
-}
+        function validateSignUpForm() {
+            const email = document.getElementById('signUpEmail').value;
+            const password = document.getElementById('signUpPassword').value;
+            const passwordConfirm = document.getElementById('signUpCheckPassword').value;
+            const isPasswordsMatch = password === passwordConfirm && password.length > 0;
+            document.getElementById('signUpButton').disabled = !email || !isPasswordsMatch;
+        }
 
-function validateAddMemberForm() {
-    const name = document.getElementById('name').value;
-    document.getElementById('memberAddButton').disabled = !name; // 이름이 비어있으면 버튼 비활성화
-}
+        function validateAddMemberForm() {
+            const name = document.getElementById('name').value;
+            document.getElementById('memberAddButton').disabled = !name; // 이름이 비어있으면 버튼 비활성화
+        }
 
         const signUpPassword = document.getElementById('signUpPassword');
         const signUpCheckPassword = document.getElementById('signUpCheckPassword');
