--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <a class="nav-link" aria-current="page" href="#team">팀 설명</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#member">멤버 카드</a>
+                            <a class="nav-link" aria-current="page" href="#member">팀원 카드</a>
                         </li>
                         </li>
                     </ul>
